[workspace]
resolver = "2"
members = ["gocardless"]

[workspace.dependencies]
again = "0.1.2"
anyhow = { version = "1.0.100", features = ["backtrace"] }
askama = { version = "0.14.0" }
axum = { version = "0.8.7", features = ["macros"] }
axum-extra = { version = "0.12.2", features = [] }
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.53", features = ["derive"] }
color-eyre = "0.6.5"
futures = "0.3.31"
http = "1.4.0"
hyper = "1.8.1"
qrcode = { version = "0.14.1", default-features = false, features = ["svg"] }
reqwest = { version = "0.12.25", features = ["json"] }
rust_decimal = "1.39.0"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = "1.0.145"
serde_urlencoded = "0.7.1"
serde_with = "3.16.1"
tempfile = "3.23.0"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7.17"
toml = "0.9.6"
tracing = "0.1.44"
tracing-error = "0.2.1"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.22", features = ["fmt","env-filter", "local-time"] }
tzfile = "0.1.3"
url = "2.5.7"
urlencoding = "2.1.3"
uuid = { version = "1.19.0", features = ["serde"] }
