[package]
name = "gc-scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
again = { workspace = true }
askama = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
color-eyre = { workspace = true }
http = { workspace = true }
qrcode = { version = "0.14.1", default-features = false, features = ["svg"] }
reqwest = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
serde_with = "3.15.1"
tempfile = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-error = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true }
tzfile = { workspace = true }
uuid = { workspace = true }
